--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -6077,23 +6077,317 @@ Taught 3 hours, did training for 3 hours, and worked on prelab
 \experiment{CHEMLAB}
 
 \begin{todolist}
-\item{Finish notes for lab}
-\item{Office hours in the morning}
+\item[\done]{Finish notes for lab}
+\item[\done]{Office hours in the morning}
 \end{todolist}
 
 \experiment{Grad}
 
 \begin{todolist}
-\item{Assume constant flux or a monte carlo flux}
-\item{What solutions do I need mass spec on}
+\item[\done]{Assume constant flux or a monte carlo flux}
+\item[\done]{What solutions do I need mass spec on}
+  \begin{itemize}
+  \item{Initial Solutions (8,9,10) three samples}
+  \item{Final solutions (8,9,10) three samples}
+  \item{First Extraction Aq solutions (8,9,10) Three samples}
+  \item{Total of 9 samples}
+  \end{itemize}
 \end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+
+\labday{Tuesday February 7, 2017}
+
+\experiment{CHEMLAB}
+
+\begin{todolist}
+\item[\done]{Teach two sections of lab today}
+\item[\done]{Also got a bunch of laboratory reportst to grade}
+\end{todolist}
+
+\experiment{Alpha_and_MassSpec}
+
+\textbf{Making alpha samples of diluted samples}
+\begin{todolist}
+\item[\done]{Extraction II}
+
+  \begin{todolist}
+  \item[\done]{- $\boxed{8\ AqII\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{8\ AqII\ Dilution}$ dropped onto
+    $\boxed{8\ ExII\ Chip\ DF100}$
+  \end{center}
+  
+  \begin{todolist}
+  \item[\done]{- $\boxed{9\ AqII\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{9\ AqII\ Dilution}$ dropped onto
+    $\boxed{9\ ExII\ Chip\ DF100}$
+  \end{center}
+
+  \begin{todolist}
+  \item[\done]{- $\boxed{10\ AqII\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{10\ AqII\ Dilution}$ dropped onto
+    $\boxed{10\ ExII\ Chip\ DF100}$
+  \end{center}
+
+\item[\done]{Extraction III}
+
+  \begin{todolist}
+  \item[\done]{- $\boxed{8\ AqIII\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{8\ AqIII\ Dilution}$ dropped onto
+    $\boxed{8\ ExIII\ Chip\ DF100}$
+  \end{center}
+  
+  \begin{todolist}
+  \item[\done]{- $\boxed{9\ AqIII\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{9\ AqIII\ Dilution}$ dropped onto
+    $\boxed{9\ ExIII\ Chip\ DF100}$
+  \end{center}
+
+  \begin{todolist}
+  \item[\done]{- $\boxed{10\ AqIII\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{10\ AqIII\ Dilution}$ dropped onto
+    $\boxed{10\ ExIII\ Chip\ DF100}$
+  \end{center}
+
+\item[\done]{Extraction 4}
+
+  \begin{todolist}
+  \item[\done]{- $\boxed{8\ A4\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{8\ Aq4\ Dilution}$ dropped onto
+    $\boxed{8\ Ex4\ Chip\ DF100}$
+  \end{center}
+  
+  \begin{todolist}
+  \item[\done]{- $\boxed{9\ Aq4\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{9\ Aq4\ Dilution}$ dropped onto
+    $\boxed{9\ Ex4\ Chip\ DF100}$
+  \end{center}
+
+  \begin{todolist}
+  \item[\done]{- $\boxed{10\ Aq4\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{10\ Aq4\ Dilution}$ dropped onto
+    $\boxed{10\ Ex4\ Chip\ DF100}$
+  \end{center}
+
+\item[\done]{Back Extraction I}
+
+  \begin{todolist}
+  \item[\done]{- $\boxed{8\ AqBI\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{8\ AqBI\ Dilution}$ dropped onto
+    $\boxed{8\ ExBI\ Chip\ DF100}$
+  \end{center}
+  
+  \begin{todolist}
+  \item[\done]{- $\boxed{9\ AqBI\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{9\ AqBI\ Dilution}$ dropped onto
+    $\boxed{9\ ExBI\ Chip\ DF100}$
+  \end{center}
+
+  \begin{todolist}
+  \item[\done]{- $\boxed{10\ AqBI\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{10\ AqBI\ Dilution}$ dropped onto
+    $\boxed{10\ ExBI\ Chip\ DF100}$
+  \end{center}
+
+\item[\done]{Back Extraction II}
+
+  \begin{todolist}
+  \item[\done]{- $\boxed{8\ AqBII\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{8\ AqBII\ Dilution}$ dropped onto
+    $\boxed{8\ ExBII\ Chip\ DF100}$
+  \end{center}
+  
+  \begin{todolist}
+  \item[\done]{- $\boxed{9\ AqBII\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{9\ AqBII\ Dilution}$ dropped onto
+    $\boxed{9\ ExBII\ Chip\ DF100}$
+  \end{center}
+
+  \begin{todolist}
+  \item[\done]{- $\boxed{10\ AqBII\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{10\ AqBII\ Dilution}$ dropped onto
+    $\boxed{10\ ExBII\ Chip\ DF100}$
+  \end{center}
+
+\item[\done]{Back Extraction III}
+
+  \begin{todolist}
+  \item[\done]{- $\boxed{8\ AqBIII\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{8\ AqBIII\ Dilution}$ dropped onto
+    $\boxed{8\ ExBIII\ Chip\ DF100}$
+  \end{center}
+  
+  \begin{todolist}
+  \item[\done]{- $\boxed{9\ AqBIII\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{9\ AqBIII\ Dilution}$ dropped onto
+    $\boxed{9\ ExBIII\ Chip\ DF100}$
+  \end{center}
+
+  \begin{todolist}
+  \item[\done]{- $\boxed{10\ AqBIII\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{10\ AqBIII\ Dilution}$ dropped onto
+    $\boxed{10\ ExBIII\ Chip\ DF100}$
+  \end{center}
+
+\item[\done]{Tot Product}
+
+  \begin{todolist}
+  \item[\done]{- $\boxed{8\ Tot\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{8\ Tot\ Dilution}$ dropped onto
+    $\boxed{8\ Tot\ Chip\ DF100}$
+  \end{center}
+  
+  \begin{todolist}
+  \item[\done]{- $\boxed{9\ Tot\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{9\ Tot\ Dilution}$ dropped onto
+    $\boxed{9\ Tot\ Chip\ DF100}$
+  \end{center}
+
+  \begin{todolist}
+  \item[\done]{- $\boxed{10\ Tot\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{10\ Tot\ Dilution}$ dropped onto
+    $\boxed{10\ Tot\ Chip\ DF100}$
+  \end{center}
+
+\end{todolist}
+
+
+\textbf{Counting}
+\begin{todolist}
+\item[\done]{Start alpha count $\boxed{8\ ExI\ Aq ChipII}$ (Extraction I Aqueous phase DF=160)}
+  \begin{itemize}
+  \item{Realize that we already counted $\boxed{8\ ExI\ Aq ChipII}$ and $\boxed{10\ ExI\ Aq ChipII}$}
+  \end{itemize}
+\item[\done]{Stop alpha count $\boxed{8\ ExI\ Aq ChipII}$}
+\item[\done]{Start alpha count $\boxed{8\ Tot\ Aq}$}
+\end{todolist}
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+
+\labday{Wednesday February 8, 2017}
+
+\experiment{Alpha_and_MassSpec}
+\begin{todolist}
+\item[\done]{Stop alpha count $\boxed{8\ Tot\ Aq}$}
+  \begin{itemize}
+  \item{Noticed Energies were way off, but still two peaks}
+  \end{itemize}
+\item[\done]{Loaded up alpha source}
+  \begin{itemize}
+  \item{The energy peaks shifted back to what it should be! What?!}
+  \end{itemize}
+\item[\done]{Restarted alpha count $\boxed{8\ Tot\ Aq}$, and its energies are now
+  in the right places....annoying}
+\end{todolist}
+
+\experiment{ResearchMeeting}
+\textbf{Things to talk about for this last week}
+\begin{itemize}
+\item{Made all alpha samples}
+\item{Will need three weeks with the 4 peak alpha source}
+\item{Sent proposal to Dr. Chirayath Friday evening}
+  \begin{itemize}
+  \item{DF leading to Pu initial concentration}
+    \begin{itemize}
+    \item{Mathmatical determination of DF}
+    \item{Use for next step}
+    \end{itemize}
+  \item{Forensic analysis for attribution indicators}
+    \begin{itemize}
+    \item{Burnup (Cs-137)}
+    \item{Flux Magnitude (Nd-148)}
+    \item{Initial enrichment (Heavy Metal Composition)}
+    \item{Fuel Age (Burn-up)$\rightarrow$ concentration, decay}
+    \item{Fast-to-thermal ratios (iterative solution)}
+    \end{itemize}
+  \end{itemize}
+\item{Samples for mass spec}
+  \begin{itemize}
+  \item{Initial solutions Aq (3)}
+  \item{First extraction Aq solutions (3)}
+  \item{Final solutions (3)}
+  \end{itemize}
+\item{Calculated DFs}
+\end{itemize}
 
 
 
 \experiment{Alpha_and_MassSpec}
 \begin{todolist}
-\item{Start product counts to see about how much Pu we are getting}
-\item{Make Notes for which alpha samples to make to finish experiments}
+\item{Stop alpha count $\boxed{8\ Tot\ Aq}$}
+\item{Start alpha count $\boxed{9\ Tot\ Aq}$}
 \end{todolist}
 
 
