--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -6380,6 +6380,8 @@ Taught 3 hours, did training for 3 hours, and worked on prelab
   \item{Final solutions (3)}
   \end{itemize}
 \item{Calculated DFs}
+\item{Kevin found a nice paper}
+\item{Dr. Chirayath returned proposal (to committee members by end of week)}
 \end{itemize}
 
 
