--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -6383,16 +6383,59 @@ Taught 3 hours, did training for 3 hours, and worked on prelab
 \item{Kevin found a nice paper}
 \item{Dr. Chirayath returned proposal (to committee members by end of week)}
 \end{itemize}
+\textbf{Results from Research Meeting}
 
-
+\begin{todolist}
+\item{Mass balance with organic \frownie}
+  \begin{itemize}
+  \item{Add drop of concentrated nitric acid to diluted aqueous phases}
+  \item{Let sit over the weekend, make samples of it}
+  \end{itemize}
+\item[\done]{Ask prophessors about a defense date for the proposal}
+\item{Normalize results to volume}
+\item{Figure out 40 keV peak}
+\item{Average runs accross}
+\item{Finish Paper for proposal}
+\item{ph versus plutonium oxidation states}
+\end{todolist}
+\textbf{Interesting thing from Jeremy's stuff}
+\begin{itemize}
+\item{What is the covariance between two ratios}
+\item{Xe declarations, Charlton paper, correlated between burnup and reactor type}
+\end{itemize}
 
 \experiment{Alpha_and_MassSpec}
+\textbf{Counting}
 \begin{todolist}
-\item{Stop alpha count $\boxed{8\ Tot\ Aq}$}
-\item{Start alpha count $\boxed{9\ Tot\ Aq}$}
+\item[\done]{Stop alpha count $\boxed{8\ Tot\ Aq}$}
+\item[\done]{Start alpha count $\boxed{9\ Tot\ Aq}$}
+  \begin{itemize}
+  \item{The energy peaks look off, but I have two samples with one on, and one off
+    hopefully they give the same answers}
+  \end{itemize}
 \end{todolist}
-
-
+\textbf{Counting}
+\begin{todolist}
+\item[\done]{Find which samples you can add a small amount of concentrated nitric acid to}
+  \begin{itemize}
+  \item{Should add to organic total diluted samples, they have a DF of 100, and were
+    diluted in DI water}
+  \end{itemize}
+\end{todolist}
+\textbf{Prepping the organic solutions, final concentration of nitric acid should be 0.5 M}
+\begin{align*}
+  m_1V_1=&m_2V_2\\
+  V_1=&\frac{m_2V_2}{m_1}\\
+  V_1=&\frac{0.5*1.0334}{15.44}\\
+  V_1=&0.0334
+\end{align*}
+This means we should add 33.4 $\mu$l of concentrated nitric acid to our organic total
+diluted solutions.
+\begin{todolist}
+\item[\done]{Add 33.4 of 15.44 M HNO\tsbs{3} to $\boxed{8\ Or\ Tot\ Dilution}$}
+\item[\done]{Add 33.4 of 15.44 M HNO\tsbs{3} to $\boxed{9\ Or\ Tot\ Dilution}$}
+\item[\done]{Add 33.4 of 15.44 M HNO\tsbs{3} to $\boxed{10\ Or\ Tot\ Dilution}$}
+\end{todolist}
 %----------------------------------------------------------------------
 %	Examples
 %-----------------------------------------------------------------------
