--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -6436,6 +6436,79 @@ diluted solutions.
 \item[\done]{Add 33.4 of 15.44 M HNO\tsbs{3} to $\boxed{9\ Or\ Tot\ Dilution}$}
 \item[\done]{Add 33.4 of 15.44 M HNO\tsbs{3} to $\boxed{10\ Or\ Tot\ Dilution}$}
 \end{todolist}
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+
+\labday{Thursday February 9, 2017}
+
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item[\done]{Teach lab}
+  \begin{itemize}
+  \item{Got in trouble for having a student take a form to the office}
+  \end{itemize}
+\item{Do a practice run through for lab}
+\end{todolist}
+
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item[\done]{Stop alpha count $\boxed{9\ Tot\ Aq}$}
+  \begin{itemize}
+  \item{Noticed Energies were way off, but still two peaks}
+  \end{itemize}
+\item[\done]{Start alpha count $\boxed{10\ Tot\ Aq}$}
+\end{todolist}
+
+\textbf{Sample Prep}
+
+\begin{todolist}
+\item[\done]{Organic Totals Make chips}
+
+  \begin{todolist}
+  \item[\done]{- $\boxed{8\ Org\ Tot\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{8\ Org\ Tot\ Dilution}$ dropped onto
+    $\boxed{8\ Org\ Tot\ Chip}$
+  \end{center}
+  
+  \begin{todolist}
+  \item[\done]{- $\boxed{9\ Org\ Tot\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{9\ Org\ Tot\ Dilution}$ dropped onto
+    $\boxed{9\ Org\ Tot\ Chip}$
+  \end{center}
+
+  \begin{todolist}
+  \item[\done]{- $\boxed{10\ Org\ Tot\ Dilution}$}
+  \end{todolist}
+  \vspace{0.3cm}
+  \begin{center}
+    10+/-0.12 $\mu$l of $\boxed{10\ Org\ Tot\ Dilution}$ dropped onto
+    $\boxed{10\ Org\ Tot\ Chip}$
+  \end{center}
+\end{todolist}
+
+\experiment{Grad}
+
+\begin{todolist}
+\item{Make Doodle poll for meeting times}
+\item{Finish paper edits}
+\item{Two good journal papers}
+\end{todolist}
+
+
 %----------------------------------------------------------------------
 %	Examples
 %-----------------------------------------------------------------------
