--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -6509,6 +6509,129 @@ diluted solutions.
 \end{todolist}
 
 
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+
+\labday{Friday February 10, 2017}
+
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item[\done]{Stop alpha count $\boxed{10\ Tot\ Aq}$}
+\item[\done]{Return Dr. Marianno's detector to him}
+\end{todolist}
+
+\experiment{Grad}
+
+\begin{todolist}
+\item[\done]{Determined time to have prelims}
+\item[\done]{Submitted paper edits to Dr. Chirayath}
+\end{todolist}
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+
+\labday{Saturday February 11, 2017}
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Random Happenings}
+\begin{todolist}
+\item[\done]{Give 9 laboratory tours}
+\item[\done]{Alpha detector swamped with water from Mary's experiment (accident)}
+  \begin{itemize}
+  \item{Mary cleaned things up}
+  \item{I dried my samples}
+  \end{itemize}
+\end{todolist}
+
+
+\experiment{CHEMLAB}
+
+\begin{todolist}
+\item[\done]{Grade papers}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+
+\labday{Sunday February 12, 2017}
+
+\experiment{CHEMLAB}
+
+\begin{todolist}
+\item[\done]{Grade papers}
+\end{todolist}
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+
+\labday{Monday February 13, 2017}
+\textbf{Not feeling good, need to sleep}
+
+\experiment{CHEMLAB}
+
+\begin{todolist}
+\item[\done]{Grade papers, submit grades, email students}
+\item[\done]{Office hours}
+\item{Prelab for this week}
+\end{todolist}
+
+
+
+\experiment{Grad}
+
+\begin{todolist}
+\item[\done]{Helped Henry look at a code}
+\item[\done]{Get date for dry run with Dr. Chiayath}
+\item[\done]{Submit paper to committe members}
+\item[\done]{Print up form for prelims}
+\item{Send email about grade change}
+\item[\done]{Send Dr. Chirayath the journal papers}
+\item{Complete prelims presentation}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+
+\labday{Tuesday February 14, 2017}
+
+\experiment{CHEMLAB}
+
+\begin{todolist}
+\item{Teach two lab sessions}
+\item{Prelab for this week}
+\end{todolist}
+
+
+
+\experiment{Grad}
+
+\begin{todolist}
+\item{Send email about grade change}
+\item{Complete prelims presentation}
+\end{todolist}
+
+
+
 %----------------------------------------------------------------------
 %	Examples
 %-----------------------------------------------------------------------
