--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -6617,18 +6617,408 @@ diluted solutions.
 \experiment{CHEMLAB}
 
 \begin{todolist}
-\item{Teach two lab sessions}
+\item[\done]{Teach two lab sessions}
 \item{Prelab for this week}
 \end{todolist}
-
-
 
 \experiment{Grad}
 
 \begin{todolist}
 \item{Send email about grade change}
+  \begin{itemize}
+  \item{No need, because the grade was changed}
+  \end{itemize}
 \item{Complete prelims presentation}
 \end{todolist}
+
+\textbf{Professors Schedules}
+\begin{itemize}
+\item{Dr. Chirayath \textbf{Blackout dates}}
+  \begin{itemize}
+  \item{Monday: 12:30pm-1:30pm}
+  \item{Tuesday: 12:30pm-2:00pm, 9:00am-10:00am}
+  \item{Wednesday: 1:00-2:30pm}
+  \item{Thursday}
+  \item{Friday}
+  \end{itemize}
+\item{Dr. Mariannos \textbf{Good times}}
+  \begin{itemize}
+  \item{Monday: Morning}
+  \item{Tuesday: Morning}
+  \item{Wednesday: Morning}
+  \item{Thursday: Morning}
+  \item{Friday: Afternoon}
+  \end{itemize}
+\item{Dr. Folden \textbf{Good times}}
+  \begin{itemize}
+  \item{Monday: Morning}
+  \item{Tuesday: Good}
+  \item{Wednesday: \textbf{bad}}
+  \item{Thursday: Good}
+  \item{Friday: Morning}
+  \end{itemize}
+\end{itemize}
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+
+\labday{Wednesday February 15, 2017}
+
+\experiment{CHEMLAB}
+
+\begin{todolist}
+\item[\done]{Prelab for this week}
+\item[\done]{Fix some stuff on the grading sheet}
+\end{todolist}
+
+\experiment{Grad}
+\begin{itemize}
+\item{Not feeling well at all sorry didn't get much else done}
+\end{itemize}
+
+\experiment{ResearchMeeting}
+\textbf{Things brought up at research meeting}
+\begin{itemize}
+\item{Prepared and made alpha samples for activity balance}
+  \begin{itemize}
+  \item{Added concentrated HNO\tsbs{3} so M=0.5}
+  \item{Prepared the samples}
+  \end{itemize}
+\item{Dr. Marianno took his alpha detector this week}
+\item{Tours this saturday, noticed soaking of alpha setup}
+\item{Didn't feel well this weekend, mostly grading and tours}
+\item{Been working on prelims presentation}
+\item{Looked up Pourbaix diagrams for plutonium}
+\end{itemize}
+
+\textbf{Notes from meeting}
+\begin{itemize}
+\item{7-10 R/hr for pellet}
+\item{What is a centrifugal contactor with 10 in series}
+\item{Kevin might change TBP concentration to match Barnwell process}
+\item{He also might study how changes in TBP changes loading}
+\item{Characteristics not signatures}
+\item{Ru/Ni decontaminations from Barnwell from Kevin, could check against my results}
+\end{itemize}
+  
+\textbf{Things to do for this week}
+\begin{todolist}
+\item[\done]{Get Kevin the contact info for ICP-Mass spec dudes}
+\item{Prepare for round table with Matthew Swinney}
+\item{Finish preparing prelims presentation}
+\item{Finish grading papers for students}
+\end{todolist}
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Thursday February 16, 2017}
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item[\done]{Taught class}
+\item[\done]{Worked through next weeks lab}
+\end{todolist}
+
+\experiment{Grad}
+\begin{todolist}
+\item{Work on prelims presentation}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Friday February 17, 2017}
+
+\textbf{Gave laboratory tour today}
+
+\experiment{Grad}
+\begin{todolist}
+\item{Work on Prelims presentation}
+\end{todolist}
+
+
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item[\done]{Got alpha detector back from Dr. Marianno}
+\end{todolist}
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Saturday February 18, 2017}
+
+\experiment{Grad}
+\begin{todolist}
+\item{Work on Prelims presentation}
+\end{todolist}
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Sunday February 19, 2017}
+
+\experiment{Grad}
+\begin{todolist}
+\item{Work on Prelims presentation}
+\end{todolist}
+
+\textbf{Notes from previous presentation}
+\begin{itemize}
+\item{Graph explanation, when it first comes up}
+\item{Separation percentage? Since its not perfect}
+\item{Distribution coefficient, changing or constant?}
+\item{Decontamination factors, what is the relationship?}
+\item{What is your objective? At which stage of whole work}
+\item{Burnup? Why HFIR?}
+\item{Recoveries Percentage table$\rightarrow$ make it clear!}
+\item{Explain the number...percentage of what?}
+\item{Acknowledgements}
+\item{Milestone of the whole work}
+\end{itemize}
+
+
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item[\done]{Set up alpha detector (make sure its pluged in)}
+\item[\done]{Reset the energy calibration}
+\item[\done]{Start alpha count $\boxed{8\ Tot\ Or}$}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Monday February 20, 2017}
+
+\experiment{Grad}
+\begin{todolist}
+\item{Prepare something for Matthew Swinney afternoon meeting in Dr. Chirayath's office}
+\item{Lots of meetings with Matthew Swinney to INMM, round table}
+\end{todolist}
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item{Stop alpha count $\boxed{8\ Tot\ Or}$}
+\item{Start alpha count $\boxed{9\ Tot\ Or}$}
+\end{todolist}
+
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item{Office Hours}
+\item{Change office hours for next week}
+\item{Get data to students}
+\item{Grade last week's reports}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Tuesday February 21, 2017}
+
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item{Teach Two sections of CHEM Lab}
+\item{Prelab for next week}
+\end{todolist}
+
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item{Stop alpha count $\boxed{9\ Tot\ Or}$}
+\item{Start alpha count $\boxed{10\ Tot\ Or}$}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Wednesday February 22, 2017}
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item{Finish prelab for next week}
+\end{todolist}
+
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item{Stop alpha count $\boxed{10\ Tot\ Or}$}
+\item{Start alpha count $\boxed{???}$}
+\end{todolist}
+
+
+
+\experiment{ResearchMeeting}
+\textbf{Prepare for Research meeting}
+\begin{itemize}
+\item{Got alpha detector back}
+\item{Finished prelims presentation}
+\item{CHEM work stuff}
+\item{Matthew Swinney work}
+\end{itemize}
+\textbf{Notes}
+\begin{itemize}
+\item{Note}
+\vspace{2cm}
+\end{itemize}
+\textbf{Todo this upcoming week}
+\begin{todolist}
+\item{More alpha counts}
+\item{Prelims!!}
+\vspace{2cm}
+\end{todolist}
+
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Thursday February 23, 2017}
+
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item{Teach Lab session}
+\item{Do practice run of next weeks lab}
+\end{todolist}
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item{Stop alpha count $\boxed{???}$}
+\item{Start alpha count $\boxed{???}$}
+\end{todolist}
+
+
+\experiment{Grad}
+\begin{todolist}
+\item{Practice Prelim!!}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Friday February 24, 2017}
+
+\experiment{Grad}
+\begin{todolist}
+\item{Practice Prelim by myself}
+\item{Practice PRelim with Dr. Sunil (10:00am}
+\end{todolist}
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item{Grade students papers}
+\end{todolist}
+
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item{Stop alpha count $\boxed{???}$}
+\item{Start alpha count $\boxed{???}$}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Saturday February 25, 2017}
+
+\experiment{Grad}
+\begin{todolist}
+\item{Practice Prelim by myself (once or twice) Maybe with roommate}
+\end{todolist}
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item{Grade students papers}
+\end{todolist}
+
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item{Stop alpha count $\boxed{???}$}
+\item{Start alpha count $\boxed{???}$}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Sunday February 24, 2017}
+
+\experiment{Grad}
+\begin{todolist}
+\item{Practice Practice Practice prelims}
+\end{todolist}
+
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item{Stop alpha count $\boxed{???}$}
+\item{Start alpha count $\boxed{???}$}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Monday February 25, 2017}
+
+\experiment{Grad}
+\begin{todolist}
+\item{Prelims}
+\end{todolist}
+
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item{Stop alpha count $\boxed{???}$}
+\item{Start alpha count $\boxed{???}$}
+\end{todolist}
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item{Make up office hours}
+\end{todolist}
+
+\textbf{Do nothing else you just did your prelims}
 
 
 
