--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -6774,6 +6774,26 @@ diluted solutions.
 \experiment{Grad}
 \begin{todolist}
 \item{Work on Prelims presentation}
+  \begin{todolist}
+  \item[\done]{Objectives}
+  \item[\done]{Literature Review}
+  \item{Forensic Calculations}
+  \item{Experimental Procedures}
+    \begin{itemize}
+    \item{Mass Spec, Gamma Spec, Alpha Spec, Serial numbers}
+    \end{itemize}
+  \item{Results}
+    \begin{itemize}
+    \item{Show New Averaged D-values}
+    \item{Show old results and how okay}
+    \end{itemize}
+  \item[\done]{Future work}
+    \begin{itemize}
+    \item{Collect and Analyze alpha results}
+    \item{Couple programs}
+    \item{Forensic analysis on all the things}
+    \end{itemize}
+  \end{todolist}
 \end{todolist}
 
 \textbf{Notes from previous presentation}
@@ -6800,6 +6820,12 @@ diluted solutions.
 \item[\done]{Start alpha count $\boxed{8\ Tot\ Or}$}
 \end{todolist}
 
+\textbf{Jeremy's previous research}
+\begin{itemize}
+\item{\tss{\done}Cs,Eu,Rb,Sr,Nd,Pm,Sm,U,Pu}
+\item{Ba,Sm,Eu,Pu}
+\end{itemize}
+
 
 %-----------------------------------------------------------------
 %	LAB BOOK day
@@ -6809,24 +6835,28 @@ diluted solutions.
 
 \experiment{Grad}
 \begin{todolist}
-\item{Prepare something for Matthew Swinney afternoon meeting in Dr. Chirayath's office}
-\item{Lots of meetings with Matthew Swinney to INMM, round table}
+\item[\done]{Prepare something for Matthew Swinney afternoon meeting in Dr. Chirayath's office}
+\item[\done]{Lots of meetings with Matthew Swinney to INMM, round table}
 \end{todolist}
 
 \experiment{Alpha_and_MassSpec}
 \textbf{Counting}
 \begin{todolist}
-\item{Stop alpha count $\boxed{8\ Tot\ Or}$}
-\item{Start alpha count $\boxed{9\ Tot\ Or}$}
+\item[\done]{Stop alpha count $\boxed{8\ Tot\ Or}$}
+\item[\done]{Start alpha count $\boxed{9\ Tot\ Or}$}
 \end{todolist}
 
 
 \experiment{CHEMLAB}
 \begin{todolist}
-\item{Office Hours}
-\item{Change office hours for next week}
-\item{Get data to students}
-\item{Grade last week's reports}
+\item[\done]{Office Hours}
+\item[\done]{Change office hours for next week, 1:00pm-3:00pm}
+\item{Get data to students:}
+  \begin{itemize}
+  \item{26\tss{o}20'x96\tss{o}80' March = 3.4, April = 2.5}
+  \item{28\tss{o}28'x96\tss{o}68' March = 5.8, April = 22}
+  \end{itemize}
+\item[\done]{Grade last week's reports}
 \end{todolist}
 
 
@@ -6839,16 +6869,20 @@ diluted solutions.
 
 \experiment{CHEMLAB}
 \begin{todolist}
-\item{Teach Two sections of CHEM Lab}
+\item[\done]{Teach Two sections of CHEM Lab}
 \item{Prelab for next week}
+  \begin{itemize}
+  \item{Almost done}
+  \end{itemize}
+\item[\done]{Finish Grading}
 \end{todolist}
 
 
 \experiment{Alpha_and_MassSpec}
 \textbf{Counting}
 \begin{todolist}
-\item{Stop alpha count $\boxed{9\ Tot\ Or}$}
-\item{Start alpha count $\boxed{10\ Tot\ Or}$}
+\item[\done]{Stop alpha count $\boxed{9\ Tot\ Or}$}
+\item[\done]{Start alpha count $\boxed{10\ Tot\ Or}$}
 \end{todolist}
 
 
@@ -6860,16 +6894,10 @@ diluted solutions.
 
 \experiment{CHEMLAB}
 \begin{todolist}
-\item{Finish prelab for next week}
+\item[\done]{Finish prelab for next week}
 \end{todolist}
 
 
-\experiment{Alpha_and_MassSpec}
-\textbf{Counting}
-\begin{todolist}
-\item{Stop alpha count $\boxed{10\ Tot\ Or}$}
-\item{Start alpha count $\boxed{???}$}
-\end{todolist}
 
 
 
@@ -6883,16 +6911,244 @@ diluted solutions.
 \end{itemize}
 \textbf{Notes}
 \begin{itemize}
+\item{Dr. Chirayath published: Praeter, and view X-section}
+\item{Jeremy's awesome name, SABER}
+\item{How would I beat Jeremy's Methodology}
+  \begin{itemize}
+  \item{Two different reprocessin schemes}
+    \begin{itemize}
+    \item{DF=10\tss{6} Reactor Grade Pu}
+    \item{DF=10\tss{8} Weapons Grade Pu}
+    \end{itemize}
+  \item{Take 1\% of the first and 99\% of the second}
+  \item{Fission Products 1/2 ratio of both}
+  \end{itemize}
+\item{Could integrate over the peak to et a likely value}
+\end{itemize}
+\textbf{Todo this upcoming week}
+\begin{todolist}
+\item{More alpha counts}
+\item{Prelims!!}
+\end{todolist}
+
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Thursday February 23, 2017}
+
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item[\done]{Teach Lab session}
+\item[\done]{Do practice run of next weeks lab}
+\end{todolist}
+
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item[\done]{Stop alpha count $\boxed{10\ Tot\ Or}$}
+\item[\done]{Start alpha count $\boxed{8\ Ex2\ DF=100\ \mu l=10}$}
+\end{todolist}
+
+
+\experiment{Grad}
+\begin{todolist}
+\item[\done]{Finish Slides}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Friday February 24, 2017}
+
+\experiment{Grad}
+\begin{todolist}
+\item[\done]{Practice PRelim with Dr. Sunil (10:00am)}
+\end{todolist}
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item{Grade students papers}
+\end{todolist}
+
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item[\done]{Stop alpha count $\boxed{8\ Ex2\ DF=100\ \mu l=10}$}
+\item[\done]{Start alpha count $\boxed{9\ Ex2\ DF=100\ \mu l=10}$}
+\end{todolist}
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Saturday February 25, 2017}
+
+\experiment{Grad}
+\begin{itemize}
+\item{Had a panic attack most of today, I'm sorry world, but this is
+  getting to me}
+\end{itemize}
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item{Grade students papers}
+\end{todolist}
+
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Sunday February 26, 2017}
+
+\experiment{Grad}
+\begin{todolist}
+\item[\done]{Practice Prelim by myself (once or twice) Maybe with roommate}
+\end{todolist}
+
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item[\done]{Stop alpha count $\boxed{9\ Ex2\ DF=100\ \mu l=10}$}
+\item[\done]{Start alpha count $\boxed{10\ Ex2\ DF=100\ \mu l=10}$}
+\end{todolist}
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Monday February 27, 2017}
+
+\experiment{Grad}
+\begin{todolist}
+\item[\done]{Prelims}
+  \begin{todolist}
+  \item{Very Stressful}
+  \item{Area's of concern, evevator speech, getting all the work done}
+  \end{todolist}
+\item[\done]{Update proposal per Dr. Chirayath's comments}
+\end{todolist}
+
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item[\done]{Stop alpha count $\boxed{10\ Ex2\ DF=100\ \mu l=10}$}
+\item[\done]{Start alpha count $\boxed{8\ Ex3\ DF=100\ \mu l=10}$}
+\end{todolist}
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item[\done]{Make up office hours 1:00pm-3:00pm}
+\item[\done]{Finish grading - soooo tired}
+\end{todolist}
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Tuesday February 28, 2017}
+
+\textbf{Random Stuff}
+\begin{itemize}
+\item{Gather signatures for another form for prelims}
+\item{Modify both documents for the prelims}
+  \begin{itemize}
+  \item{Got a cool book from Dr. Folden}
+  \end{itemize}
+\item{Needed to get a check for work done in January (else wouldn't be able to pay
+  for school or pay off the credit card bill - they only gave me certain hours to get the check)}
+\end{itemize}
+
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item[\done]{Grade two sections of lab}
+  \begin{itemize}
+  \item{Got the talk from Dr. Lee, I am being too nice on the grading}
+  \end{itemize}
+\end{todolist}
+
+
+\experiment{Grad}
+\begin{todolist}
+\item{Update proposal per Dr. Folden's comments}
+\end{todolist}
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Wednesday March 1, 2017}
+
+\textbf{Random Stuff}
+\begin{itemize}
+\item{Update this notebook}
+\end{itemize}
+
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item[\done]{Stop alpha count $\boxed{8\ Ex3\ DF=100\ \mu l=10}$}
+\item[\done]{Start alpha count $\boxed{9\ Ex3\ DF=100\ \mu l=10}$}
+\end{todolist}
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item{Do the prelab for next week's lab (due tomorrow night)}
+\end{todolist}
+
+
+\experiment{Grad}
+\textbf{Notes on Bateman solvers}
+\begin{itemize}
+\item{63-Group Flux $\rightarrow$63-Group X-sections$\rightarrow$63-group RXN Rates}
+\item{Above is energy integrated to determine total RXN rate}
+\end{itemize}
+\textbf{Things to do}
+\begin{todolist}
+\item{Update proposal per Dr. Folden's comments}
+\item{Update written portion of the exam per everyone's concern}
+\end{todolist}
+
+
+\experiment{ResearchMeeting}
+\textbf{Prepare for Research meeting}
+\begin{itemize}
+\item{Finished prelims presentation}
+\item{Getting caught up on grading for class (mid term grades)}
+\item{Comments for the prelims working on the documents}
+\end{itemize}
+\textbf{Notes}
+\begin{itemize}
 \item{Note}
 \vspace{2cm}
 \end{itemize}
 \textbf{Todo this upcoming week}
 \begin{todolist}
 \item{More alpha counts}
-\item{Prelims!!}
+\item{Finish Prelims work, start on disseration (by this weekend)}
 \vspace{2cm}
 \end{todolist}
-
 
 
 
@@ -6912,14 +7168,15 @@ diluted solutions.
 \experiment{Alpha_and_MassSpec}
 \textbf{Counting}
 \begin{todolist}
-\item{Stop alpha count $\boxed{???}$}
-\item{Start alpha count $\boxed{???}$}
+\item{Stop alpha count $\boxed{9\ Ex3\ DF=100\ \mu l=10}$}
+\item{Start alpha count $\boxed{10\ Ex3\ DF=100\ \mu l=10}$}
 \end{todolist}
 
 
 \experiment{Grad}
 \begin{todolist}
-\item{Practice Prelim!!}
+\item{Get Dr. McDeavitt's signature}
+\item{Work Dissertation}
 \end{todolist}
 
 
@@ -6931,8 +7188,7 @@ diluted solutions.
 
 \experiment{Grad}
 \begin{todolist}
-\item{Practice Prelim by myself}
-\item{Practice PRelim with Dr. Sunil (10:00am}
+\item{Start Coding Part of project}
 \end{todolist}
 
 \experiment{CHEMLAB}
@@ -6944,9 +7200,10 @@ diluted solutions.
 \experiment{Alpha_and_MassSpec}
 \textbf{Counting}
 \begin{todolist}
-\item{Stop alpha count $\boxed{???}$}
-\item{Start alpha count $\boxed{???}$}
+\item{Stop alpha count $\boxed{10\ Ex3\ DF=100\ \mu l=10}$}
+\item{Start alpha count $\boxed{8\ Ex4\ DF=100\ \mu l=10}$}
 \end{todolist}
+
 
 
 %-----------------------------------------------------------------
@@ -6957,7 +7214,7 @@ diluted solutions.
 
 \experiment{Grad}
 \begin{todolist}
-\item{Practice Prelim by myself (once or twice) Maybe with roommate}
+\item{Program end of dissertation}
 \end{todolist}
 
 \experiment{CHEMLAB}
@@ -6969,8 +7226,8 @@ diluted solutions.
 \experiment{Alpha_and_MassSpec}
 \textbf{Counting}
 \begin{todolist}
-\item{Stop alpha count $\boxed{???}$}
-\item{Start alpha count $\boxed{???}$}
+\item{Stop alpha count $\boxed{8\ Ex4\ DF=100\ \mu l=10}$}
+\item{Start alpha count $\boxed{9\ Ex4\ DF=100\ \mu l=10}$}
 \end{todolist}
 
 
@@ -6978,47 +7235,29 @@ diluted solutions.
 %	LAB BOOK day
 %---------------------------------------------------------------
 
-\labday{Sunday February 24, 2017}
+\labday{Sunday February 26, 2017}
+
+\textbf{Write Procedures for next week}
 
 \experiment{Grad}
 \begin{todolist}
-\item{Practice Practice Practice prelims}
-\end{todolist}
-
-
-\experiment{Alpha_and_MassSpec}
-\textbf{Counting}
-\begin{todolist}
-\item{Stop alpha count $\boxed{???}$}
-\item{Start alpha count $\boxed{???}$}
-\end{todolist}
-
-
-%-----------------------------------------------------------------
-%	LAB BOOK day
-%---------------------------------------------------------------
-
-\labday{Monday February 25, 2017}
-
-\experiment{Grad}
-\begin{todolist}
-\item{Prelims}
-\end{todolist}
-
-
-\experiment{Alpha_and_MassSpec}
-\textbf{Counting}
-\begin{todolist}
-\item{Stop alpha count $\boxed{???}$}
-\item{Start alpha count $\boxed{???}$}
+\item{Program end of dissertation}
 \end{todolist}
 
 \experiment{CHEMLAB}
 \begin{todolist}
-\item{Make up office hours}
+\item{Grade students papers}
 \end{todolist}
 
-\textbf{Do nothing else you just did your prelims}
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item{Stop alpha count $\boxed{9\ Ex4\ DF=100\ \mu l=10}$}
+\item{Start alpha count $\boxed{10\ Ex4\ DF=100\ \mu l=10}$}
+\end{todolist}
+
+
 
 
 
